--- a/updoc/templates/updoc/index.html
+++ b/updoc/templates/updoc/index.html
@@ -1,37 +1,60 @@
 {% extends 'updoc/base.html' %}
-{% load bootstrap3 %}
+{% load bootstrap3 staticfiles i18n djangofloor %}
 
 {% block content %}
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
+    <div class="row">
+        <div class="col-sm-12 col-lg-6 col-xs-12 col-md-6">
+            <h2>{{ list_title }} <a href="{% url 'last_docs_rss' %}" data-toggle="tooltip" title="{% trans 'Last uploaded documents' %}">{% fontawesome_icon 'rss-square' %} </a></h2>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-<h2>Heading</h2>
-<ul class="list-unstyled">{% for group in user.groups.all %}<li>{{ group.name }}</li>{% endfor %}</ul>
-          <p>Groups:
+            <p>
+            <ul class="list-unstyled">
+                {% for doc in recent_uploads %}
+                    <li><a href="{% url 'updoc.views.show_doc' doc_id=doc.id path='' %}">{{ doc.name }}</a>
+                        {% if doc.index %}<span>
+                                    [ <a href="{% url 'updoc.views.show_doc' doc_id=doc.id path=doc.index %}">{% trans 'Index' %}</a> ]
+                                    </span>{% endif %}
+                    </li>
+                    {% empty %}
+                    <li>{% trans 'No document found' %}</li>
+                {% endfor %}
+            </ul>
+            </p>
+        </div>
 
-              Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="index.html#" role="button">View details &raquo;</a></p>
+        <div class="col-sm-12 col-lg-6 col-xs-12 col-md-6">
+            <h2>{% trans 'Recently viewed' %} <a href="{% url 'most_viewed_feed' %}" data-toggle="tooltip" title="{% trans 'Feed with your most viewed documents' %}">{% fontawesome_icon 'rss-square' %} </a></h2>
+
+            <p>
+            <ul class="list-unstyled">
+                {% for doc in recent_checked %}
+                    <li>
+                        <a href="{% url 'updoc.views.show_doc' doc_id=doc.doc.id path='' %}">{{ doc.doc.name }}</a>
+                        {% if doc.doc.index %}<span class="index_page">
+                                    [ <a href="{% url 'updoc.views.show_doc' doc_id=doc.doc.id path=doc.doc.index %}">{% trans 'Index' %}</a> ]
+                                    </span>{% endif %}
+                    </li>
+                    {% empty %}
+                    <li>{% trans 'No document found' %}</li>
+                {% endfor %}
+            </ul>
+            </p>
         </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="index.html#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="index.html#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
+        {% if keywords %}
+            <div class="col-sm-6 col-lg-12 col-xs-12 col-md-12">
+                <h4>{% trans 'Keywords' %} [
+                    <small><a href="{% url 'updoc.views.full_list' %}">{% trans 'All documents' %}</a></small>
+                    ]
+                </h4>
+                <p>
+                <ul class="list-inline">
+                    {% for kw in keywords %}
+                        <li><a href="{% url 'updoc.views.index' %}?search={{ kw.value }}">{{ kw.value }}</a>
+                        </li>
+                        {% empty %}
+                        <li>{% trans 'No keyword found' %}</li>
+                    {% endfor %}
+                </ul>
+                </p>
+            </div>{% endif %}
     </div>
 {% endblock %}
