--- a/updoc/templates/updoc/list_dir.html
+++ b/updoc/templates/updoc/list_dir.html
@@ -1,47 +1,11 @@
-{% extends "tpl_main.html" %}{% load staticfiles %}{% load url from future %}{% load i18n %}{% load updoc %}{% load bootstrap3 %}
-{% block body %}
-    <div class="row">
-    <div class="col-lg-2 col-md-3 hidden-xs hidden-sm">
-        <h2>{% trans 'Properties' %}</h2>
-
-        <p>
-        <ul class="list-unstyled">
-            {% if doc.user %}
-                <li><p>{% trans 'Uploaded by:' %} {{ doc.user }}</p></li>
-
-            {% endif %}
-            <li><p>{{ doc.upload_time|date:"SHORT_DATETIME_FORMAT" }}</p></li>
-            <li>
-                <p>
-                    <small><a
-                            href="{% url 'updoc.views.show_doc_alt' doc_id=doc.id path='' %}">{% trans 'Alternative link (no authentication)' %}</a>
-                    </small>
-                </p>
-            </li>
-            <li>
-                <p><a class="btn btn-lg btn-primary" role="button"
-                      href="{% url 'updoc.views.compress_archive' doc_id=doc.id fmt='zip' %}">
-                    {% bootstrap_icon "cloud-download" %} {% trans 'Download as ZIP' %}
-                </a></p>
-            </li>
-            {% if editable %}
-                <li>
-                    <p><a class="btn btn-lg btn-danger" role="button"
-                          onclick="return confirm('{% trans 'Delete this file?' %}');"
-                          href="{% url 'updoc.views.delete_doc' doc_id=doc.id %}">
-                        {% bootstrap_icon "trash" %} {% trans 'Delete' %}
-                    </a></p>
-                </li>
-            {% endif %}
-        </ul>
-        </p>
-    </div>
+{% extends "updoc/doc_properties.html" %}{% load staticfiles i18n bootstrap3 djangofloor updoc %}
+{% block main_content %}
     <div class="col-lg-10 col-md-9 col-xs-12 col-sm-12">
         <h2>{% trans 'Document:' %}
                         <span {% if editable %}contenteditable="true"
                               title="{% trans 'Click here to edit the title, ESC to validate.' %}"
                               onblur="edit_title({{ doc.id }}, this);"{% endif %}>{{ doc }}
-                                {% if editable and not doc.name %}{% trans 'Click to edit title' %}{% endif %}</span>
+                            {% if editable and not doc.name %}{% trans 'Click to edit title' %}{% endif %}</span>
             <img class="hidden" id="loading_title" src="{% static 'images/ajax-loader.gif' %}"
                  alt="{% trans 'loading…' %}"/>
         </h2>
@@ -89,6 +53,5 @@
             {% endif %}
             </div>
         </div>
-    </div>
     </div>
 {% endblock %}
