Code cleaning, error pages, translation

--- a/updoc/templates/updoc/base.html
+++ b/updoc/templates/updoc/base.html
@@ -2,7 +2,7 @@
 {% load i18n bootstrap3 djangofloor static %}
 {% block head_favicon %}<link rel="shortcut icon" href="{% static 'images/updoc.png' %}">{% endblock %}
 {% block bootstrap3_nav %}
-    <div class="navbar navbar-inverse" role="navigation">
+    <div class="navbar-inverse" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
