--- a/updoc/templates/updoc/base.html
+++ b/updoc/templates/updoc/base.html
@@ -56,7 +56,7 @@
     <hr class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
     <footer class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
         <p>
-            <small>UpDoc {{ updoc_version }}, ©{% trans 'Matthieu Gallet, 2015.' %}</small>
+            <small>UpDoc! {{ updoc_version }} ©{% trans 'Matthieu Gallet, 2015.' %}</small>
         </p>
     </footer>
 {% endblock %}
