Work on DjangoFloor 1.0.0

--- a/updoc/templates/updoc/delete_url_confirm.html
+++ b/updoc/templates/updoc/delete_url_confirm.html
@@ -1,4 +1,4 @@
-{% load i18n %}<form method="POST" action="{% url 'updoc.views.delete_url' url_id=url_id %}">
+{% load i18n %}<form method="POST" action="{% url 'updoc:delete_url' url_id=url_id %}">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="{% trans 'Close' %}"><span aria-hidden="true">&times;</span>
         </button>
