--- a/updoc/templates/updoc/base.html
+++ b/updoc/templates/updoc/base.html
@@ -10,21 +10,21 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'updoc.views.index' %}" title="{% trans 'Index' %}">{{ df_project_name }}</a>
+            <a class="navbar-brand" href="{% url 'index' %}" title="{% trans 'Index' %}">{{ df_project_name }}</a>
             {% if perms.updoc.add_uploaddoc %}
-                <a class="navbar-brand" href="{% url 'updoc.views.upload' %}" title="{% trans 'Upload a document' %}">
+                <a class="navbar-brand" href="{% url 'upload' %}" title="{% trans 'Upload a document' %}">
                     {% bootstrap_icon 'cloud-upload' %}
                 </a>{% endif %}
-            {% if user.is_authenticated %}<a class="navbar-brand small" href="{% url 'updoc.views.my_docs' %}" title="{% trans 'My documents' %}">
+            {% if user.is_authenticated %}<a class="navbar-brand small" href="{% url 'updoc:my_docs' %}" title="{% trans 'My documents' %}">
                 {% bootstrap_icon 'edit' %}</a>{% endif %}
             {% for doc in updoc_most_checked %}
                 <a class="navbar-brand small hidden-sm hidden-xs"
-                   href="{% url 'updoc.views.show_doc' doc_id=doc.doc.id path=doc.doc.index %}">
+                   href="{% url 'updoc:show_doc' doc_id=doc.doc.id path=doc.doc.index %}">
                     <small>{{ doc.doc.name }}</small>
                 </a>
             {% endfor %}
-            <a class="navbar-brand" href="{% url 'updoc.views.show_favorite' %}" title="{% trans 'Bookmarks' %}">{% bootstrap_icon 'bookmark' %}</a>
-            <a class="navbar-brand" href="{% url 'updoc.views.show_proxies' %}" title="{% trans 'proxy.pac' %}">{% bootstrap_icon 'random' %}</a>
+            <a class="navbar-brand" href="{% url 'updoc:show_favorite' %}" title="{% trans 'Bookmarks' %}">{% bootstrap_icon 'bookmark' %}</a>
+            <a class="navbar-brand" href="{% url 'updoc:show_proxies' %}" title="{% trans 'proxy.pac' %}">{% bootstrap_icon 'random' %}</a>
             {% if user.is_authenticated and not df_remote_authenticated %}
                 <a class="navbar-brand" href="{% url 'account_email' %}">{% fontawesome_icon 'pencil' %}&nbsp;
                     <small>{{ user }}</small>
@@ -40,7 +40,7 @@
         </div>
         <div class="navbar-collapse collapse">
 
-            <form class="navbar-form navbar-right" id="search_form" role="form" method="get" action="{% url 'updoc.views.show_search_results' %}">
+            <form class="navbar-form navbar-right" id="search_form" role="form" method="get" action="{% url 'updoc:show_search_results' %}">
                 <div class="form-group has-success has-feedback">
                     <input name="search" placeholder="{% trans 'Search' %}" type="text" class="form-control"
                            id="inputSuccess4"/>
@@ -56,7 +56,7 @@
     <hr class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
     <footer class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
         <p>
-            <small>UpDoc! {{ updoc_version }} ©{% trans 'Matthieu Gallet, 2016.' %}</small>
+            <small>UpDoc! {{ updoc_version }} ©{% trans 'Matthieu Gallet, 2017.' %}</small>
         </p>
     </footer>
 {% endblock %}
