--- a/updoc/templates/updoc/my_docs.html
+++ b/updoc/templates/updoc/my_docs.html
@@ -8,12 +8,12 @@
             <ul class="list-unstyled">
                 {% if uploads %}{% for doc in uploads %}
                     <li class="updoc_{{ doc.id }}">
-                        <a href="{% url 'updoc.views.show_doc' doc_id=doc.id path='' %}">{{ doc.name }}</a>
+                        <a href="{% url 'updoc:show_doc' doc_id=doc.id path='' %}">{{ doc.name }}</a>
                         <small>{% trans ', upload date: ' %}{{ doc.upload_time|date:"SHORT_DATETIME_FORMAT" }}</small>
                         {% if doc.keywords.count %}<span class="keywords">({{ doc.keywords.all|join:', ' }})
                             </span>{% endif %}
                         {% if doc.index %}<span class="index_page">
-                                    [ <a href="{% url 'updoc.views.show_doc' doc_id=doc.id path=doc.index %}">{% trans 'Index' %}</a> ]
+                                    [ <a href="{% url 'updoc:show_doc' doc_id=doc.id path=doc.index %}">{% trans 'Index' %}</a> ]
                                     </span>{% endif %}
                         {% if editable %}
                             <button class="btn btn-xs btn-danger"
@@ -30,8 +30,8 @@
                         <li>{% blocktrans with total=es_data.total %}{{ total }} documents found.{% endblocktrans %} </li>
                     {% endif %}
                     {% endif %}
-                    <li><a href="{% url 'updoc.views.show_doc' doc_id=doc.1 path='' %}">{{ doc.0 }}</a>
-                        <a href="{% url 'updoc.views.show_doc' doc_id=doc.1 path=doc.2 %}">/ {{ doc.2 }}</a></li>
+                    <li><a href="{% url 'updoc:show_doc' doc_id=doc.1 path='' %}">{{ doc.0 }}</a>
+                        <a href="{% url 'updoc:show_doc' doc_id=doc.1 path=doc.2 %}">/ {{ doc.2 }}</a></li>
                     {% empty %}
                     {% if not uploads.count %}<li>{% trans 'No document found' %}</li>{% endif %}
                 {% endfor %}
@@ -57,7 +57,8 @@
                         <li>{% trans 'No URL found' %}</li>
                     {% endfor %}
                 </ul>
-                </p><h2>{% trans 'Add a new URL to rewrite' %}</h2>
+                </p>
+                {% if perms.updoc.add_uploaddoc %}<h2>{% trans 'Add a new URL to rewrite' %}</h2>
 
                 <p>            {% trans 'This URL will be rewritten in all HTML, CSS and JS files.' %}</p>
 
@@ -67,6 +68,7 @@
                         <button type="submit"
                                 class="btn btn-primary">{% bootstrap_icon "ok-sign" %} {% trans 'Add this URL' %}</button>
                     {% endbuttons %}</form>
+                {% endif %}
             </div>{% endif %}
     </div>
 {% endblock %}
