--- a/updoc/templates/updoc/base.html
+++ b/updoc/templates/updoc/base.html
@@ -1,6 +1,14 @@
 {% extends 'djangofloor/base.html' %}
 {% load i18n bootstrap3 djangofloor static %}
-{% block head_favicon %}<link rel="shortcut icon" href="{% static 'images/updoc.png' %}">{% endblock %}
+{% block head_favicon %}
+<link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicons/apple-touch-icon.png' %}">
+<link rel="icon" type="image/png" href="{% static 'favicons/favicon-32x32.png' %}" sizes="32x32">
+<link rel="icon" type="image/png" href="{% static 'favicons/favicon-16x16.png' %}" sizes="16x16">
+<link rel="manifest" href="{% static 'favicons/manifest.json' %}">
+<link rel="mask-icon" href="{% static 'favicons/safari-pinned-tab.svg' %}" color="#5bbad5">
+<link rel="shortcut icon" href="{% static 'favicons/favicon.ico' %}">
+<meta name="msapplication-config" content="{% static 'favicons/browserconfig.xml' %}">
+{% endblock %}
 {% block bootstrap3_nav %}
     <div class="navbar-inverse" role="navigation">
         <div class="navbar-header">
@@ -10,7 +18,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'index' %}" title="{% trans 'Index' %}">{{ df_project_name }}</a>
+            <a class="navbar-brand" href="{% url 'index' %}" title="{% trans 'Index' %}">{% trans 'UpDoc!' %}</a>
             {% if perms.updoc.add_uploaddoc %}
                 <a class="navbar-brand" href="{% url 'upload' %}" title="{% trans 'Upload a document' %}">
                     {% bootstrap_icon 'cloud-upload' %}
