--- a/updoc/templates/updoc/base.html
+++ b/updoc/templates/updoc/base.html
@@ -42,12 +42,12 @@
                 <a class="navbar-brand" href="{% url 'login' %}">{% fontawesome_icon 'sign-in' %}</a>
             {% endif %}
             {% if user and user.is_superuser %}
+                <a class="navbar-brand" href="{% url 'df:system_state' %}" title="{% trans 'Check system state' %}">{% bootstrap_icon 'eye-open' %}</a>
                 <a id="link_admin" class="navbar-brand" href="{% url 'admin:index' %}" title="{% trans 'Administration' %}">{% bootstrap_icon 'wrench' %}</a>
             {% endif %}
 
         </div>
         <div class="navbar-collapse collapse">
-
             <form class="navbar-form navbar-right" id="search_form" role="form" method="get" action="{% url 'updoc:show_search_results' %}">
                 <div class="form-group has-success has-feedback">
                     <input name="search" placeholder="{% trans 'Search' %}" type="text" class="form-control"
