--- a/updoc/templates/updoc/doc_properties.html
+++ b/updoc/templates/updoc/doc_properties.html
@@ -33,6 +33,12 @@
                 </li>
                 <li>
                     <p><a class="btn btn-sm btn-primary" role="button"
+                          href="{{ doc.docset_feed }}">
+                        {% fontawesome_icon 'dashcube' %} {% trans 'Add to Zeal' %}
+                    </a></p>
+                </li>
+                <li>
+                    <p><a class="btn btn-sm btn-primary" role="button"
                           href="{{ doc.docset_url }}">
                         {% fontawesome_icon "cloud-download" %} {% trans 'Download as Dash docset' %}
                     </a></p>
